--- a/NeuralNet/NeuralNet.vcxproj
+++ b/NeuralNet/NeuralNet.vcxproj
@@ -66,9 +66,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Net.h" />
+    <ClInclude Include="Neuron.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Net.cpp" />
+    <ClCompile Include="Neuron.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
